--- a/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
+++ b/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
@@ -11,15 +11,14 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
+      <PackageReference Include="AWSSDK.KeyManagementService" Version="3.7.301.6" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
