--- a/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
+++ b/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
@@ -11,15 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="EntityFrameworkCore.Encryption.Postgres" />
-        <InternalsVisibleTo Include="EntityFrameworkCore.Encryption.AwsWrapping" />
+        <InternalsVisibleTo Include="EntityFrameworkCore.Encryption.Postgres.AwsWrapping" />
         <InternalsVisibleTo Include="EntityFrameworkCore.Encryption.Tests" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
-        <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\8.0.2\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
-      </Reference>
     </ItemGroup>
 
 </Project>
