--- a/samples/EntityFrameworkCore.Samples.Encryption.AesWrapping/appsettings.json
+++ b/samples/EntityFrameworkCore.Samples.Encryption.AesWrapping/appsettings.json
@@ -8,10 +8,7 @@
   "AllowedHosts": "*",
   "Database": 
   {
-    "TestAesKey": "hJTwepMWVzC4gD3LR4Dae/85+u2hVxPYltXiLboRYaQ=",
-    
     "WrappingKeyId": "37215C9B-650D-4F73-9ED2-1741203CA803",
-    "ConnectionString": "Server=localhost;Port=5432;Database=encryption-sample;User Id=debug;Password=debug;",
-    "DataKeyCacheExpiration": "00:00:30"
+    "ConnectionString": "Server=localhost;Port=5432;Database=encryption-sample;User Id=debug;Password=debug;"
   }
 }
