--- a/tests/EntityFrameworkCore.Encryption.UnitTests/EntityFrameworkCore.Encryption.UnitTests.csproj
+++ b/tests/EntityFrameworkCore.Encryption.UnitTests/EntityFrameworkCore.Encryption.UnitTests.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\EntityFrameworkCore.Encryption\EntityFrameworkCore.Encryption.csproj" />
+      <ProjectReference Include="..\..\src\EntityFrameworkCore.Encryption.Postgres.AwsWrapping\EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj" />
     </ItemGroup>
 
 </Project>
