--- a/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
+++ b/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
@@ -21,4 +21,8 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="EntityFrameworkCore.Encryption.IntegrationTests" />
+    </ItemGroup>
+
 </Project>
