--- a/tests/EntityFrameworkCore.Encryption.IntegrationTests/EntityFrameworkCore.Encryption.IntegrationTests.csproj
+++ b/tests/EntityFrameworkCore.Encryption.IntegrationTests/EntityFrameworkCore.Encryption.IntegrationTests.csproj
@@ -31,6 +31,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\EntityFrameworkCore.Encryption.Postgres.AwsWrapping\EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj" />
+      <ProjectReference Include="..\EntityFrameworkCore.Encryption.Tests.Shared\EntityFrameworkCore.Encryption.Tests.Shared.csproj" />
     </ItemGroup>
 
 </Project>
