--- a/tests/EntityFrameworkCore.Encryption.IntegrationTests/EntityFrameworkCore.Encryption.IntegrationTests.csproj
+++ b/tests/EntityFrameworkCore.Encryption.IntegrationTests/EntityFrameworkCore.Encryption.IntegrationTests.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Bogus" Version="35.5.0" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
