--- a/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
+++ b/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>$(AssemblyName)</PackageId>
+        <Version>$(VersionPrefix)</Version>
+        <Title>EntityFrameworkCore.Encryption</Title>
+        <Authors />
     </PropertyGroup>
 
     <ItemGroup>
