--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Test
       run: dotnet test -c Release --no-build
     - name: Pack nugets
-      run: dotnet pack -c Release --no-build --output /p:PackageVersion=${{ env.PACKAGE_VERSION }}
+      run: dotnet pack -c Release --no-build --output . /p:PackageVersion=${{ env.PACKAGE_VERSION }}
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key ${{ secrets.NUGET_API_KEY1 }} --source https://api.nuget.org/v3/index.json
