--- a/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
+++ b/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
@@ -1,9 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <IsPackable>true</IsPackable>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Title>EntityFrameworkCore.Encryption.Postgres.AwsWrapping</Title>
     </PropertyGroup>
 
     <ItemGroup>
