--- a/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
+++ b/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <IsPackable>true</IsPackable>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>$(AssemblyName)</PackageId>
-        <Version>$(VersionPrefix)</Version>
         <Title>EntityFrameworkCore.Encryption</Title>
-        <Authors />
     </PropertyGroup>
 
     <ItemGroup>
