--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Pack nugets
       run: dotnet pack -c Release --no-build --output . /p:PackageVersion=$VERSION
     - name: Push to NuGet
-      run: dotnet nuget push "*.nupkg" --api-key ${{ secrets.NUGET_API_KEY1 }} --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push "*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
