--- a/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
+++ b/src/EntityFrameworkCore.Encryption.Postgres.AwsWrapping/EntityFrameworkCore.Encryption.Postgres.AwsWrapping.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <Title>EntityFrameworkCore.Encryption.Postgres.AwsWrapping</Title>
+        <Authors>starushykart</Authors>
     </PropertyGroup>
 
     <ItemGroup>
