--- a/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
+++ b/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
@@ -5,8 +5,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageId>$(AssemblyName)</PackageId>
         <Title>EntityFrameworkCore.Encryption</Title>
+        <Authors>starushykart</Authors>
     </PropertyGroup>
 
     <ItemGroup>
