--- a/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
+++ b/src/EntityFrameworkCore.Encryption/EntityFrameworkCore.Encryption.csproj
@@ -5,8 +5,9 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Title>EntityFrameworkCore.Encryption</Title>
+        <Title>EntityFrameworkCore.Encrypted</Title>
         <Authors>starushykart</Authors>
+        <PackageId>EntityFrameworkCore.Encrypted</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
