--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,21 @@ jobs:
       
     - name: Checkout
       uses: actions/checkout@v2
+
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
+
     - name: Build
       run: dotnet build -c Release
+
     - name: Test
       run: dotnet test -c Release --no-build
-    - name: Pack nugets
-      run: dotnet pack -c Release --no-build --output . /p:PackageVersion=$VERSION
+
+    - name: Pack EntityFrameworkCore.Encrypted
+      run: dotnet pack pack src/EntityFrameworkCore.Encrypted -c Release --no-build --output . /p:PackageVersion=$VERSION
+
+    - name: Pack EntityFrameworkCore.Encrypted.Postgres.AwsWrapping
+      run: dotnet pack pack src/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping -c Release --no-build --output . /p:PackageVersion=$VERSION
+
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
