--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,10 +29,10 @@ jobs:
       run: dotnet test -c Release --no-build
 
     - name: Pack EntityFrameworkCore.Encrypted
-      run: dotnet pack pack src/EntityFrameworkCore.Encrypted/EntityFrameworkCore.Encrypted.csproj -c Release --no-build --output . /p:PackageVersion=$VERSION
+      run: dotnet pack src/EntityFrameworkCore.Encrypted -c Release --no-build --output . /p:PackageVersion=$VERSION
 
     - name: Pack EntityFrameworkCore.Encrypted.Postgres.AwsWrapping
-      run: dotnet pack pack src/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping.csproj -c Release --no-build --output . /p:PackageVersion=$VERSION
+      run: dotnet pack src/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping -c Release --no-build --output . /p:PackageVersion=$VERSION
 
     - name: Push to NuGet packages
       run: dotnet nuget push "*.nupkg" --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
