--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -15,6 +15,9 @@ jobs:
 
     name: analyze
     runs-on: ubuntu-latest
+    
+    permissions:
+      security-events: write
 
     strategy:
       fail-fast: false
