--- a/tests/EntityFrameworkCore.Encrypted.IntegrationTests/EntityFrameworkCore.Encrypted.IntegrationTests.csproj
+++ b/tests/EntityFrameworkCore.Encrypted.IntegrationTests/EntityFrameworkCore.Encrypted.IntegrationTests.csproj
@@ -22,6 +22,8 @@
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+        <PackageReference Include="Respawn" Version="6.2.1" />
+        <PackageReference Include="Respawn.Postgres" Version="1.0.15" />
         <PackageReference Include="Testcontainers.LocalStack" Version="3.8.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="3.8.0" />
         <PackageReference Include="xunit" Version="2.8.0" />
