Add MIT license to package
Included a line of code in the Directory.Build.props file to specify the PackageLicenseExpression as MIT. This will ensure the package is distributed under the MIT license.

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,6 +11,7 @@
         <Authors>starushykart</Authors>
         <Copyright>Copyright © 2024 Artem Starushyk</Copyright>
         <Description>Application-side EF Core encryption</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
