--- a/tests/EntityFrameworkCore.Encrypted.IntegrationTests/EntityFrameworkCore.Encrypted.IntegrationTests.csproj
+++ b/tests/EntityFrameworkCore.Encrypted.IntegrationTests/EntityFrameworkCore.Encrypted.IntegrationTests.csproj
@@ -14,6 +14,10 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="coverlet.msbuild" Version="6.0.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
