--- a/qodana.yaml
+++ b/qodana.yaml
@@ -2,4 +2,4 @@ version: "1.0"
 profile:
   name: qodana.recommended
 
-linter: Jetbrains/qodana-dotnet:latest
+linter: jetbrains/qodana-dotnet:latest
