--- a/src/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping.csproj
+++ b/src/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping/EntityFrameworkCore.Encrypted.Postgres.AwsWrapping.csproj
@@ -11,17 +11,17 @@
 
     <ItemGroup>
       <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
-      <PackageReference Include="AWSSDK.KeyManagementService" Version="3.7.302.13" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+      <PackageReference Include="AWSSDK.KeyManagementService" Version="3.7.302.19" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     </ItemGroup>
 
     <ItemGroup>
-        <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.IntegrationTests" />
+        <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.Tests.Postgres.AwsWrapping" />
     </ItemGroup>
 
 </Project>
