--- a/src/EntityFrameworkCore.Encrypted/EntityFrameworkCore.Encrypted.csproj
+++ b/src/EntityFrameworkCore.Encrypted/EntityFrameworkCore.Encrypted.csproj
@@ -6,13 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
     </ItemGroup>
 
     <ItemGroup>
         <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.Postgres.AwsWrapping" />
-        <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.IntegrationTests" />
-        <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.UnitTests" />
+        <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.Tests.Postgres" />
+        <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.Tests.Postgres.AwsWrapping" />
+        <InternalsVisibleTo Include="EntityFrameworkCore.Encrypted.Tests.Postgres.Shared" />
     </ItemGroup>
 
 </Project>
