--- a/tests/EntityFrameworkCore.Encrypted.Tests.Postgres/EntityFrameworkCore.Encrypted.Tests.Postgres.csproj
+++ b/tests/EntityFrameworkCore.Encrypted.Tests.Postgres/EntityFrameworkCore.Encrypted.Tests.Postgres.csproj
@@ -8,11 +8,22 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="35.5.1" />
         <PackageReference Include="coverlet.msbuild" Version="6.0.2">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+        <PackageReference Include="Respawn" Version="6.2.1" />
+        <PackageReference Include="Respawn.Postgres" Version="1.0.15" />
+        <PackageReference Include="Testcontainers.PostgreSql" Version="3.8.0" />
         <PackageReference Include="xunit" Version="2.8.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,7 +37,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\EntityFrameworkCore.Encrypted\EntityFrameworkCore.Encrypted.csproj" />
-      <ProjectReference Include="..\EntityFrameworkCore.Encrypted.Tests.Postgres.Shared\EntityFrameworkCore.Encrypted.Tests.Postgres.Shared.csproj" />
     </ItemGroup>
 
 </Project>
