--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet build --no-restore
       
     - name: Test
-      run: dotnet test --no-build --verbosity Detailed /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+      run: dotnet test --no-build --verbosity Normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
       
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
