--- a/tests/EntityFrameworkCore.Encrypted.Tests.Postgres/EntityFrameworkCore.Encrypted.Tests.Postgres.csproj
+++ b/tests/EntityFrameworkCore.Encrypted.Tests.Postgres/EntityFrameworkCore.Encrypted.Tests.Postgres.csproj
@@ -20,6 +20,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+        <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="Respawn" Version="6.2.1" />
         <PackageReference Include="Respawn.Postgres" Version="1.0.15" />
