--- a/samples/EntityFrameworkCore.Samples.Encryption.Aes/EntityFrameworkCore.Samples.Encryption.Aes.csproj
+++ b/samples/EntityFrameworkCore.Samples.Encryption.Aes/EntityFrameworkCore.Samples.Encryption.Aes.csproj
@@ -10,13 +10,16 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+      <ProjectReference Include="..\..\src\EntityFrameworkCore.Encrypted\EntityFrameworkCore.Encrypted.csproj" />
     </ItemGroup>
 
 </Project>
